--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
 							<div class="card__block-text">
 								<span class="card__text card__text--frst ">Name</span>
 								<span class="card__text card__text--frst ">Exp.</span>
-								<span class="card__name card__name--first">REHAN RAIHAN</span>
+								<span class="card__name card__name--first">OLEH ROZHANSKYI</span>
 								<span class="card__date card__date--first">09/11</span>
 							</div>
 						</div>
@@ -212,7 +212,7 @@
 							<div class="card__block-text">
 								<span class="card__text">Name</span>
 								<span class="card__text">Exp.</span>
-								<span class="card__name card__name--second">REHAN RAIHAN</span>
+								<span class="card__name card__name--second">OLEH ROZHANSKYI</span>
 								<span class="card__date card__date--second">09/11</span>
 							</div>
 						</div>
@@ -236,7 +236,7 @@
 							<div class="card__block-text">
 								<span class="card__text">Name</span>
 								<span class="card__text">Exp.</span>
-								<span class="card__name card__name--third">REHAN RAIHAN</span>
+								<span class="card__name card__name--third">OLEH ROZHANSKYI</span>
 								<span class="card__date card__date--third">09/11</span>
 							</div>
 						</div>
@@ -267,7 +267,7 @@
 							<div class="card__block-text">
 								<span class="card__text card__text--frst ">Name</span>
 								<span class="card__text card__text--frst ">Exp.</span>
-								<span class="card__name card__name--first">REHAN RAIHAN</span>
+								<span class="card__name card__name--first">OLEH ROZHANSKYI</span>
 								<span class="card__date card__date--first">09/11</span>
 							</div>
 						</div>
@@ -291,7 +291,7 @@
 							<div class="card__block-text">
 								<span class="card__text">Name</span>
 								<span class="card__text">Exp.</span>
-								<span class="card__name card__name--second">REHAN RAIHAN</span>
+								<span class="card__name card__name--second">OLEH ROZHANSKYI</span>
 								<span class="card__date card__date--second">09/11</span>
 							</div>
 						</div>
